fix: fix broken CI